feat(worker): 实现Master主动连接Worker的架构改进
本次提交实现了Worker节点发现和管理功能的重构，采用Master主动连接Worker的模式，
替代了原有的Worker主动上报机制。主要变更包括：

1. 新增master-worker-config.yml配置文件，定义了Worker发现、健康检查和连接管理的相关配置
2. 在WorkerApplicationServer中移除了原有的向Master发送状态的逻辑，并添加了新的启动日志
3. 新增WorkerDiscoveryActor用于管理和发现Worker节点
4. 在WorkerActor中添加了SystemInfoActor的创建和监控
5. 新增SystemInfoActor用于收集和返回Worker系统信息
6. 新增WorkerManagementController提供Worker管理接口
7. 在服务元数据加载时初始化WorkerDiscoveryActor

这些变更实现了更可靠的Worker节点管理机制，提高了系统的可维护性和稳定性。

相关的类和配置文件更新：WorkerDiscoveryActor, SystemInfoActor, WorkerManagementController
配置文件：master-worker-config.yml
修改文件：WorkerApplicationServer, LoadServiceMeta, WorkerActor

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>